# mini-alex

./: .gitignore  app.py  bot.py  config.py  get_data.py  get_transcript.py  logger.py  pyproject.toml  pyrightconfig.json  requirements.txt
data/: Building-Your-Content-Strategy-Team-Overview.srt  Engagement Baits.srt  Experiential Stories.srt  Experiential-Stories-and-Videos.srt  Fun-Videos.srt  How The Clickup Content Board Works How to Use It Efficiently For Content Tasks.srt  How To Analyze Your Own Content Using The Existing Content Analysis Sheet.srt  How To Establish a Reporting System For Your Content Strategy.srt  How To Fill The Content Ideation Sheet.srt  How To Identify The ‘Gap’ In Your Content Strategy Using the Gap Identification Sheet.srt  How to Build Your Own Linkedin Content Marketing Team.srt  How to Choose Your Content Persona Select Content Formats to Build a Content Calendar.srt  How to Create Content in Different Content Formats.srt  How to Perform Competitor Analysis To Identify TOFU, MOFU and BOFU Content..srt  How to activate your network continuously to optimise your reach_.srt  How to schedule weekly content ideation calls_.srt  How-LinkedIn-Content-Promotion-Works-How-to-Setup-Your-Own-System1.srt  Informative-Posts.srt  Linkboost.srt  Overview-How-to-Growth-Hack-Your-Content-Engine-Overview-.srt  QA-Videos.srt  Resource-Giveaways.srt  Slideposts.srt  The-LinkedIn-SSI-Score-How-it-Affects-Your-Content-Strategy-.srt  Tips-Tricks-Videos - 202309181509.srt  Viral Influencer Content Format(1).srt  Viral Tweets.srt  overview.srt
(+7 files in other folders)
