[project]
name = "rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chromadb>=0.6.3",
    "colorama>=0.4.6",
    "colorlog>=6.9.0",
    "flask>=3.1.0",
    "langchain>=0.3.19",
    "langchain-community>=0.3.17",
    "langchain-google-genai>=2.0.9",
    "langgraph>=0.2.74",
    "logger>=1.4",
    "nltk>=3.9.1",
    "pymongo>=4.11.1",
    "pysqlite3-binary>=0.5.4",
    "rank-bm25>=0.2.2",
    "requests>=2.32.3",
    "sentence-transformers>=3.4.1",
    "spacy>=3.8.4",
    "spellchecker>=0.4",
    "streamlit>=1.42.1",
]
